@@ -10805,9 +10805,6 @@ evas_object_textblock_render_pre(Evas_Object *eo_obj, Evas_Object_Protected_Data
    Evas_Object_Textblock *o = eo_data_scope_get(eo_obj, MY_CLASS);
    int is_v, was_v;
 
-   /* dont pre-render the obj twice! */
-   if (obj->pre_render_done) return;
-   obj->pre_render_done = EINA_TRUE;
    /* pre-render phase. this does anything an object needs to do just before */
    /* rendering. this could mean loading the image data, retrieving it from */
    /* elsewhere, decoding video etc. */
@@ -10826,6 +10823,11 @@ evas_object_textblock_render_pre(Evas_Object *eo_obj, Evas_Object_Protected_Data
         was_v = evas_object_was_visible(eo_obj, obj);
         goto done;
      }
+
+   /* dont pre-render the obj twice! */
+   if (obj->pre_render_done) return;
+   obj->pre_render_done = EINA_TRUE;
+
    if (o->redraw)
      {
         o->redraw = 0;
